@@ -114,17 +114,19 @@ void fostlib::http::server::request::operator () (
                 phoenix::construct_< string >( phoenix::arg1, phoenix::arg2 )
         ]
         >> boost::spirit::chlit< char >( ' ' )
-        >> (
-            +boost::spirit::chset<>( "_a-zA-Z0-9/.,:()%=-" )
-        )[
+        >> (+boost::spirit::chset<>( "_a-zA-Z0-9/.,:()%=-" ))[
             phoenix::var(m_pathspec) =
-                phoenix::construct_< url::filepath_string >( phoenix::arg1, phoenix::arg2 )
+                phoenix::construct_< url::filepath_string >(
+                    phoenix::arg1, phoenix::arg2
+                )
         ]
         >> !(
             boost::spirit::chlit< char >('?')
             >> (+boost::spirit::chset<>( "&\\/:_@a-zA-Z0-9.,%+*=-" ))[
                 phoenix::var(m_query_string) =
-                    phoenix::construct_< ascii_string >( phoenix::arg1, phoenix::arg2 )
+                    phoenix::construct_< ascii_printable_string >(
+                        phoenix::arg1, phoenix::arg2
+                    )
             ]
         )
         >> !(
